--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
                     R$27,90/mês ou R$279,90/ano à vista.*
                 </span>
             </p>
+            <ul class="hero__content__combos">
+                <li class="hero__content__combos__combo">
+                    <img src="dist/images/logos/disney_star_plus.png" alt="">
+                    <button>Assine Agora</button>
+                    <span class="text">R$ 45,90/mês*</span>
+                </li>
+                <li class="hero__content__combos__combo">
+                    <img src="dist/images/logos/disney_star_plus.png" alt="">
+                    <button>Assine Agora</button>
+                    <span class="text">R$ 45,90/mês*</span>
+                </li>
+            </ul>
+            <p class="text--small">
+                *O preço pode variar caso a assinatura seja feita em outra plataforma *
+            </p>
         </div>
     </section>
 </body>
