--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@
         </p>
     </section>
 
+    <section class="watch-anywhere">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="logo tv pc e tablet">
+        <div class="watch-anywhere__text_container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">
+              Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de títulos em 4k não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo.  
+            </p>
+        </div>
+    </section>
+
     <script src="src/main.js"></script>
 </body>
 </html>
