--- a/index.html
+++ b/index.html
@@ -163,15 +163,78 @@
         </p>
     </section>
 
-    <section class="watch-anywhere">
+    <section class="image-text-section">
         <img src="./dist/images/tv_pc_tablet_celular.png" alt="logo tv pc e tablet">
-        <div class="watch-anywhere__text_container">
+        <div class="image-text-section__text_container">
             <h2 class="title">Assista do seu jeito</h2>
             <p class="text--big">
               Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de títulos em 4k não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo.  
             </p>
         </div>
     </section>
+
+    <section class="image-text-section--image-full-width">
+        <img src="./dist/images/fundo_rei_leao.png" alt="rei leao">
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe Filmes e Séries</h2>
+            <p class="text--big">
+              Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>MacOS</li>
+                    <li>Chrome Os</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="televisão">
+                <h4 class="title--small">Televisão</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li>Android TV</li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="videogames">
+                <h4 class="title--small">Vídeo Game</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5</li>
+                    <li>Xbox One</li>
+                    <li>Xbox Series X</li>
+                    <li>Xbox Series S</li>
+                </ul>
+            </li>
+
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="celular">
+                <h4 class="title--small">Celulares e tablets</h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e Tablets Androi</li>
+                    <li>iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
 
     <script src="src/main.js"></script>
 </body>
