--- a/index.html
+++ b/index.html
@@ -235,6 +235,45 @@
         </ul>
     </section>
 
+    <section class="faq">
+        <h2 class="title">Perguntas frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p>
+                        <span>O Disney+ oferece</span>
+                    </p>
+                    <p>Experiência premium sem intervalos comerciais.</p>
+                    <p>As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar.</p>
+                    <p>Downloads ilimitados em até 10 dispositivos compatíveis.</p>
+                    <p>Mais de 300 títulos em 4K UHD e HDR.</p>
+                    <p>A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</p>
+                    <p>IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</p>
+                </div>
+            </li>
+
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    A resposta da pergunta
+                </div>
+            </li>
+
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    A resposta da pergunta
+                </div>
+            </li>
+        </ul>
+    </section>
 
     <script src="src/main.js"></script>
 </body>
