--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header header--is-hiden">
         <div class="header__container">
             <h1>
                 <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
@@ -191,7 +191,10 @@
     </section>
 
     <section class="image-text-section--image-full-width">
-        <img src="./dist/images/fundo_rei_leao.png" alt="rei leao">
+        <picture>
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png"/>
+            <img src="./dist/images/fundo_rei_leao.png" alt="rei leao">
+        </picture>
         <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
             <h2 class="title">Baixe Filmes e Séries</h2>
             <p class="text--big">
